2009-05-11  higepon  <higepon@users.sourceforge.jp>

        * VM-Run.cpp (run): Fixed Issue 55. check argument of append.

        * ByteVector.h (scheme): Fixed the bug on Big Endian.

2009-05-07  higepon  <higepon@users.sourceforge.jp>

        * ByteVector.h (scheme): Fiexd strct-aliasing problems.

        * Makefile.am (install-data-hook): Fixed the bug of installation-path.

2009-05-01  higepon  <higepon@users.sourceforge.jp>

        * TestingVM.cpp : Moved last Flash type.

2009-05-01  kokosabu  <kokosabu@gmail.com>

        * Added : auto port close.

2009-04-29  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/ffi.ss : Exported sizeof(c-type) align:of, on-linux and on-windows.

2009-04-28  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/irc/client.ss: Added IRC Client.

        * Fixed (mosh-executable-path) on FreeBSD.

2009-04-27  higepon  <higepon@users.sourceforge.jp>

        * Merged socket branch to trunk.
          svn merge  ./branches/socket trunk -r1639:HEAD

2009-04-27  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp: Added #include <netinet/in.h> for FreeBSD.

        * OSCompatSocket.cpp : Added WSAGetLastError call.

        * lib/srfi/%3a19/time/compat.mosh.sls (srfi): Fixed the bug.

        * UtilityProcedures.cpp (gensymEx): Rewrote gensym in C++.

        * lib/match.ss Added Alex Shinn's match library.

2009-04-25  higepon  <higepon@users.sourceforge.jp>

        * test/socket.scm: Added tests for socket.

        * main.cpp (main): Added SIGPIPE.

        * os-constants.scm : Defined necessary OS constants related to Socket.

        * lib/mosh/socket.ss : Added a document for Socket API.

2009-04-24  higepon  <higepon@users.sourceforge.jp>

        * Fixed the bug of write/display causes native stack overflow.

2009-04-23  higepon  <higepon@users.sourceforge.jp>

        * Added irc-client and markov sample.

        * SocketProcedures.cpp : Added (socket-port socket).
