@@ -465,6 +465,7 @@ test: ./mosh all-tests.scm update libffitest.so.1.0
 	./mosh test/lists.scm
 	./mosh test/socket.scm
 	./mosh test/match.scm
+	./mosh test/print.scm
 	(cd r6rs-test-suite && $(MAKE) $@)
 
 
