@@ -40,13 +40,22 @@ Object Symbol::QUOTE;
 Object Symbol::QUASIQUOTE;
 Object Symbol::UNQUOTE;
 Object Symbol::UNQUOTE_SPLICING;
-Object Symbol::AFTER;
-Object Symbol::BEFORE;
-Object Symbol::TOP_LEVEL;
+Object Symbol::QUOTE_B;
+Object Symbol::QUASIQUOTE_B;
+Object Symbol::UNQUOTE_B;
+Object Symbol::UNQUOTE_SPLICING_B;
 Object Symbol::SYNTAX;
 Object Symbol::QUASISYNTAX;
 Object Symbol::UNSYNTAX;
 Object Symbol::UNSYNTAX_SPLICING;
+Object Symbol::SYNTAX_B;
+Object Symbol::QUASISYNTAX_B;
+Object Symbol::UNSYNTAX_B;
+Object Symbol::UNSYNTAX_SPLICING_B;
+
+Object Symbol::AFTER;
+Object Symbol::BEFORE;
+Object Symbol::TOP_LEVEL;
 Object Symbol::BIG;
 Object Symbol::LITTLE;
 Object Symbol::LF;
@@ -71,13 +80,23 @@ void Symbol::initBuitinSymbols()
     QUASIQUOTE        = Symbol::intern(UC("quasiquote"));
     UNQUOTE           = Symbol::intern(UC("unquote"));
     UNQUOTE_SPLICING  = Symbol::intern(UC("unquote-splicing"));
+    QUOTE_B           = Symbol::intern(UC("QUOTE"));
+    QUASIQUOTE_B      = Symbol::intern(UC("QUASIQUOTE"));
+    UNQUOTE_B         = Symbol::intern(UC("UNQUOTE"));
+    UNQUOTE_SPLICING_B= Symbol::intern(UC("UNQUOTE-SPLICING"));
+    SYNTAX             = Symbol::intern(UC("syntax"));
+    QUASISYNTAX        = Symbol::intern(UC("quasisyntax"));
+    UNSYNTAX           = Symbol::intern(UC("unsyntax"));
+    UNSYNTAX_SPLICING  = Symbol::intern(UC("unsyntax-splicing"));
+    SYNTAX_B           = Symbol::intern(UC("SYNTAX"));
+    QUASISYNTAX_B      = Symbol::intern(UC("QUASISYNTAX"));
+    UNSYNTAX_B         = Symbol::intern(UC("UNSYNTAX"));
+    UNSYNTAX_SPLICING_B= Symbol::intern(UC("UNSYNTAX-SPLICING"));
+
+
     AFTER             = Symbol::intern(UC("after"));
     BEFORE            = Symbol::intern(UC("before"));
     TOP_LEVEL         = Symbol::intern(UC("top level"));
-    SYNTAX            = Symbol::intern(UC("syntax"));
-    QUASISYNTAX       = Symbol::intern(UC("quasisyntax"));
-    UNSYNTAX          = Symbol::intern(UC("unsyntax"));
-    UNSYNTAX_SPLICING = Symbol::intern(UC("unsyntax-splicing"));
     BIG               = Symbol::intern(UC("big"));
     LITTLE            = Symbol::intern(UC("little"));
 
