@@ -1,5 +1,12 @@
-(define (fact n)
-             (let f ((n n) (r 1))
-               (if (< n 2) r
-                  (f (- n 1) (* r n)))))
-(fact 10000)
+(import (mosh)
+        (rnrs)
+        (only (mosh pp) pp))
+
+(define-syntax y
+  (lambda (x)
+    (syntax-case x ()
+      ([_ z]
+       (and (pp #'z))
+       #'d))))
+(let ([x 1])
+(y x))
